Time: 1 ms (87.88%) | Memory: 44.6 MB (5.74%) - LeetSync