@@ -1,20 +1,20 @@
 class Solution {
-    List<List<Integer>> ans= new ArrayList<>();
+    List<List<Integer>> ans = new ArrayList<>();
+
     public List<List<Integer>> subsets(int[] nums) {
-        List<Integer> temp= new ArrayList<>();
-        solve(nums, 0, temp);
+        List<Integer> curr = new ArrayList<>();
+        helper(nums, 0, curr);
         return ans;
     }
-    public void solve(int[] nums, int idx, List<Integer> temp){
-        if(idx == nums.length){
-            ans.add(new ArrayList<>(temp));
+
+    public void helper(int[] nums, int idx, List<Integer> curr) {
+        if (idx == nums.length) {
+            ans.add(new ArrayList<>(curr));
             return;
         }
-        // for(int i = idx; i< nums.length; i++){
-        // }
-        temp.add(nums[idx]);
-        solve(nums, idx + 1, temp);
-        temp.remove(temp.size() - 1);
-        solve(nums, idx + 1, temp);
+        curr.add(nums[idx]);
+        helper(nums, idx + 1, curr);
+        curr.removeLast();
+        helper(nums, idx + 1, curr);
     }
 }
